<resources>
    <string name="app_name">Nixon</string>
    <string name="play_alarm_action_hint">Alarm</string>
    <string name="play_alarm_action_title">Event reminder</string>
    <string name="play_alarm_action_edit_title">Customize a Reminder</string>
    <string name="personal_name">name</string>
    <string name="personal_edit">Edit</string>
    <string name="personal_title">PROFILE</string>
    <string name="name_your_watch">What\'s \n your \nname?</string>
    <string name="edit_name_hint">Enter Name</string>
    <string name="personal_weight">What\'s\n your\n weight?</string>
    <string name="personal_tall">How \ntall are\n you?</string>
    <string name="personal_goal">How \nambitious \nare you?</string>
    <string name="auto_desc">(allow phone to set local\ntime zone automatically)</string>
    <string name="return_to_profile">Back to profile</string>
    <string name="return_to_setting">Back to settings</string>
    <string name="settings_fragment_title">Austen\'s Ambassador Settings</string>
    <string name="settings_fragment_add">ADD WATCH</string>
    <string name="settings_fragment_hands">CALIBRATION</string>
    <string name="settings_fragment_shutter">REMOTE SHUTTER</string>
    <string name="settings_fragment_contacts">FAVORITE CONTACTS</string>
    <string name="settings_fragment_alert">DISCONNECT ALERT</string>
    <string name="settings_fragment_help">HELP</string>
    <string name="settings_fragment_url">NIXON.COM</string>
    <string name="add_watch_remind">Place \n your watch \n close to your \n phone.</string>
    <string name="ble_near_by_title">Available devices</string>
    <string name="calibration_manager_title">CALIBRATE WATCH HANDS</string>
    <string name="calibration_pager_num1">(1/4)</string>
    <string name="calibration_pager_num2">(2/4)</string>
    <string name="calibration_pager_num3">(3/4)</string>
    <string name="calibration_pager_num4">(4/4)</string>
    <string name="next">Next</string>
    <string name="calibration_clock_wise">Clockwise</string>
    <string name="calibration_clock_wise_anti">Counter\nClockwise</string>
    <string name="calibration_pager_tip1">Match the below time to your\nwatch\'s current hand positions.</string>
    <string name="calibration_pager_tip2">Use Pushers to\nadjust subdial hand\nto 12:00 position.</string>
    <string name="calibration_pager_tip3">Use Pushers to\nadjust subdial hand\nto 12:00 position.</string>
    <string name="calibration_pager_tip4">Use Pushers to\nadjust subdial hand\nto 12:00 position.</string>
    <string name="camera_yanshi_time">Delay</string>
    <string name="camera_tip">Press any pusher on the watch or \n shake your wrist to take a picture</string>
    <string name="contentdescription"></string>
    <string name="btn_confrim">Ok</string>
    <string name="camera_error">Camera unavailable.Please enable APP to access your camera or try again after restarting you device</string>
    <string name="camera_delay_off">OFF</string>
    <string name="contact_btn_edit">Edit</string>
    <string name="contact_btn_cancel">Cancel</string>
    <string name="contact_btn_delete">Delete</string>
    <string name="login_username_hint">Please Enter E-mail</string>
    <string name="login_pass_hint">Please Enter Password</string>
    <string name="forget_pass_hint">Reset the 6-16 password</string>
    <string name="register_pass_hint">Enter password(Between 6-16 characters)</string>
    <string name="login">Login</string>
    <string name="login_forget_pass">Forgot password</string>
    <string name="login_new_user">New User?</string>
    <string name="login_register">Register</string>
    <string name="login_facebook">Login with Facebook</string>
    <string name="login_google">connect via Google</string>
    <string name="forget_act_desc">Please enter the e-mail \n registered to Request \n a password reset.</string>
    <string name="send_code">Send</string>
    <string name="enter_code">Enter the Verification Code</string>
    <string name="done">DONE</string>
    <string name="register_login">Login</string>
    <string name="register_have_account">Already have an account?</string>
    <string name="ok">OK</string>
    <string name="no">NO</string>
    <string name="yes">YES</string>
    <string name="skip">Skip</string>
    <string name="skip_low">skip</string>
    <string name="pair">Pair</string>
    <string name="about">About</string>
    <string name="introduction">INTRODUCTION</string>
    <string name="connect_back_setting_tip">Back to settings</string>
    <string name="connect_close_watch_tip">Place \n your watch \n close to your \n phone</string>
    <string name="connect_near_device">Available devices</string>
    <string name="connect_connecting">Connecting</string>
    <string name="add_alarm">Add Alarm</string>
    <string name="edit">Edit</string>
    <string name="alarm_btn_confrim">Confirm</string>
    <string name="sunday">Sunday</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednessday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Firday</string>
    <string name="saturday">Saturday</string>
    <string name="conn_frag_title">Add Watch</string>
    <string name="paired">Paired</string>
    <string name="failed">Failed</string>
    <string name="connect_auhor_tip">When you see Green\nLED at 12:00. press any\n pusher or shake \nwatch to connect.</string>
    <string name="connect_near_devices">Available devices</string>
    <string name="connect_add_watch">Add watch</string>
    <string name="connect_paired">paired</string>
    <string name="wrong_email">Invalid E-mail \n Address.</string>
    <string name="null_password">Empty Password</string>
    <string name="login_error">There was a problem logging in \n Please try again.</string>
    <string name="wrong_password_setting">Wrong password setting</string>
    <string name="help_home">Let\'s get \n into it.</string>
    <string name="help_pager2_title">Subdials</string>
    <string name="help_pager2_bot">Each subdial displays \n different information.</string>
    <string name="auto_time_zones">Want to update\n the time when\n traveling across \n time zones?</string>
    <string name="help_title">Austen\'s Ambassador</string>
    <string name="help_pager3_title">Right Subdial</string>
    <string name="help_pager3_bot">Your mode indicator and \n connection status.</string>
    <string name="help_pager4_title">Top pusher</string>
    <string name="help_pager4_bot">Press to change modes. Right \n subdial indicates current mode.</string>
    <string name="help_pager5_title">Day/Date mode</string>
    <string name="help_pager5_bot">The bottom subdial points\nto the date and the left subdial points\nto the day of the week.</string>
    <string name="help_pager6_title">T2/Goal mode</string>
    <string name="help_pager6_bot">The bottom subdial points to your status\nagainst the daily activity goal you set in your\napp.The left subdial points to the time in the\nsecond time zone you set in the app. Note\nthe time is shown in 24 hrs.</string>
    <string name="help_pager7_title">Left Subdial</string>
    <string name="help_pager7_bot">Second Time Zone\nor Day of Week.</string>
    <string name="help_pager8_title">Bottom Subdial</string>
    <string name="help_pager8_bot">Goal Progress or\nDay of the Month.</string>
    <string name="help_pager9_title">Battery mode</string>
    <string name="help_pager9_bot">The LED at 12:00 will blink to show\nbattery status.Green is good and Red\nindicates it is time to change the battery.</string>
    <string name="help_pager10_title">Connect Mode</string>
    <string name="help_pager10_bot">The LED at 12:00 will blink to show\nyour connected status. Green is\nconnected and Red is not connected.</string>
    <string name="help_pager11_title">Bottom pusher</string>
    <string name="help_pager11_bot">Press to go direct \nto Connect mode.</string>
    <string name="help_pager12_title">Top pusher</string>
    <string name="help_pager12_bot">Press and hold to \nactivate Find my Phone.</string>
    <string name="help_pager13_title">Bottom pusher</string>
    <string name="help_pager13_bot">Press and hold to turn \n BlueTooth® on/off.</string>
    <string name="settings_fragment_unit">UNITS</string>
    <string name="settings_fragment_about">ABOUT</string>
    <string name="forget_resend">Resend</string>
    <string name="check_sent">A verification code \n was sent to your e- \n mail address.Please \n access before \n continuing the \n password reset \n process.</string>
    <string name="wrong_code">Wrong verification code</string>
    <string name="unit">Units</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="home_edit">edit</string>
    <string name="home_step">STEPS</string>
    <string name="home_distance">MILES</string>
    <string name="home_cal">KCAL</string>
    <string name="time_fom">Hour Format</string>
    <string name="distance">Distance</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="choose_zone_title">/UTC</string>
    <string name="choose_city_title">Select time zone.</string>
    <string name="city_title">City/Region</string>
    <string name="bad_net">Please check your network.</string>
    <string name="seacrh_hint">Search city/country</string>
    <string name="settings_fragment_connected">CONNECTED DEVICES</string>
    <string name="disconnected">Disconnected</string>
    <string name="disconnected_l">(disconnected)</string>
    <string name="battery">Battery</string>
    <string name="device_details">Device Details</string>
    <string name="delete_history">Delete Historical Data</string>
    <string name="disconnect_device">Disconnect device?</string>
    <string name="device_details_desc">The change name will be enabled after the \n reconnection</string>
    <string name="device_details_settings">Device Details settings</string>
    <string name="device_details_hint">Ambassador</string>
    <string name="motion_data">Motion data</string>
    <string name="clear">Clear</string>
    <string name="delete_history_tip">All historical data\n will be deleted,\n are you sure you\n want to do this?</string>
    <string name="delete_toast">Clear Complete</string>
    <string name="alarm_toast">Max add 5 alarm</string>
    <string name="contact_btn_confirm">Confirm</string>
    <string name="contact_btn_update">Update</string>
    <string name="ota_tip">During this update the\n watch will not sync \ndata or notifications \n with your phone.\nPlease do not turn \n either device off and\ncheck back in a few.</string>
    <string name="ota_new_version_tip">We noticed your\nwatch is using an older\n firmware version.\n Would you like to\n update now?</string>
    <string name="request_notify_permission">Please open the \n appropriate \n permissions</string>
    <string name="settings_fragment_profile">MY PROFILE</string>
    <string name="register_successful">Registration is\nsuccessful,please go\nto the E-mail to \n activate account.</string>
    <string name="contact_tip">Setting up Favorite \n Contacts will indicate \n a Green light on watch \n when they call.</string>
    <string name="ota_update_title">WE\' VE GOT AN UPDATE！</string>
    <string name="ota_update_confirm">DO IT \n LATER</string>
    <string name="ota_update_cancel">UPDATE \n NOW</string>
    <string name="choose_zone_abbre">Abbre</string>
    <string name="favorite_tip"><![CDATA[Please go to \n Settings > Apps > \n Smart Analog > \n Permissions and \n allow this app to \n access your \n Contacts.]]></string>
    <string name="choose_unit">Choose your Units \n of Measurement:</string>
    <string name="favorite_contact">Favorite Contacts</string>
    <string name="filter_vcode">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
</resources>