<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.example.bo.nixon.ui.activity.LoginActivity"
    >
    <ImageView
        android:id="@+id/login_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/icon_close"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:gravity="center"
        android:text="NIXON"
        android:textColor="@color/main_text_color"
        android:textSize="50sp"
        />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/login_user_name"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/login_username_hint"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/main_text_color"
        android:textColorHint="@color/side_bar_text"
        app:met_accentTypeface="fonts/Montserrat-Regular.ttf"
        app:met_hideUnderline="true"
        android:textCursorDrawable="@null"
        />
    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/login_pass_hint"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:maxLength="16"
        android:textColor="@color/main_text_color"
        android:textColorHint="@color/side_bar_text"
        app:met_accentTypeface="fonts/Montserrat-Regular.ttf"
        app:met_clearButton="true"
        app:met_eye_close_or_open="true"
        app:met_hideUnderline="true"
        android:textCursorDrawable="@null"
        />

    <TextView
        android:id="@+id/login_login"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_red_bg"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/login"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RelativeLayout
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="7dp"
            >
            <TextView
                android:id="@+id/login_forget"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:textColor="@color/sup_text_color"
                android:text="@string/login_forget_pass"
                />
            <TextView
                android:id="@+id/login_to_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/login_register"
                android:textColor="@color/blue_text"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/login_to_register"
                android:textColor="@color/sup_text_color"
                android:text="@string/login_new_user"
                />

        </RelativeLayout>
        <LinearLayout
            android:id="@+id/register_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35dp"
            android:layout_marginRight="35dp"
            android:layout_marginTop="7dp"
            android:gravity="center_horizontal"
            android:visibility="gone"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/sup_text_color"
                android:text="@string/register_have_account"
                />

            <TextView
                android:id="@+id/register_to_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_login"
                android:textColor="@color/blue_text"
                />
        </LinearLayout>
    </FrameLayout>
    <TextView
        android:id="@+id/login_facebook"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/button_deep_blue_bg"
        android:gravity="center"
        android:visibility="gone"
        android:textColor="@color/white"
        android:text="@string/login_facebook"
        />

    <TextView
        android:id="@+id/login_google"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="40dp"
        android:textColor="@color/white"
        android:background="@drawable/button_shallow_blue_bg"
        android:gravity="center"
        android:text="@string/login_google"
        />

</LinearLayout>
