<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_forget_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    tools:context="com.example.bo.nixon.ui.activity.LoginActivity"
    >
    <com.example.bo.nixon.ui.view.SmartToolbar
        android:id="@+id/forget_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >
    </com.example.bo.nixon.ui.view.SmartToolbar>

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:gravity="center"
        android:text="@string/forget_act_desc"
        android:textColor="@color/main_text_color"
        android:textSize="18sp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:orientation="horizontal"
        >
        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/forget_email"
            android:layout_width="0dp"
            android:layout_height="44dp"
            android:layout_weight="300"
            android:background="@drawable/edittext_bg"
            android:hint="@string/login_username_hint"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:textColor="@color/main_text_color"
            android:textColorHint="@color/side_bar_text"
            app:met_hideUnderline="true"
            />
        <TextView
            android:id="@+id/forget_send"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="90"
            android:background="@color/main_text_color"
            android:gravity="center"
            android:text="@string/send_code"
            android:textColor="@color/white"
            />
    </LinearLayout>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/forget_code"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/enter_code"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/main_text_color"
        android:textColorHint="@color/side_bar_text"
        app:met_hideUnderline="true"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/forget_password"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edittext_bg"
        android:hint="@string/forget_pass_hint"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/main_text_color"
        android:textColorHint="@color/side_bar_text"
        app:met_clearButton="true"
        app:met_eye_close_or_open="true"
        app:met_hideUnderline="true"
        />

    <TextView
        android:id="@+id/forget_done"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_marginLeft="35dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/button_red_bg"
        android:gravity="center"
        android:textColor="@color/white"
        android:text="@string/done"
        />

</LinearLayout>
