<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:fitsSystemWindows="true"
    >
    <TextView
        android:id="@+id/favorite_tip"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/favorite_tip"
        android:textColor="@color/main_text_color"
        android:textSize="25sp"
        android:visibility="gone"
        />
    <LinearLayout
        android:id="@+id/favorite_content_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <LinearLayout
            android:id="@+id/frequent_toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/frag_frequent_back_arrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp"
                android:src="@drawable/icon_small_arrow"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/return_to_setting"
                android:textColor="@color/sup_text_color"
                />
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/favorite_contact"
            android:textColor="@color/sup_text_color"
            android:gravity="center"
            android:textSize="20sp"
            />
        <ListView
            android:id="@+id/frequent_listview"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >
        </ListView>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            >
            <TextView
                android:id="@+id/frequent_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="+ Add Contacts"
                android:textColor="@color/sup_text_color"
                android:textSize="16sp"
                />
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                >
                <TextView
                    android:id="@+id/contact_btn_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/contact_btn_edit"
                    android:textColor="@color/sup_text_color"
                    android:textSize="16sp"
                    />
                <LinearLayout
                    android:id="@+id/contact_btn_ll"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:visibility="gone"
                    >
                    <TextView
                        android:id="@+id/contact_btn_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contact_btn_cancel"
                        android:textColor="@color/sup_text_color"
                        android:textSize="16sp"
                        />
                    <TextView
                        android:id="@+id/contact_btn_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/contact_btn_delete"
                        android:textColor="@color/sup_text_color"
                        android:textSize="16sp"
                        />
                </LinearLayout>
            </FrameLayout>
        </RelativeLayout>

    </LinearLayout>
</RelativeLayout>