<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    >
    <RelativeLayout
        android:id="@+id/unit_frag_toolbar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        >
        <ImageView
            android:id="@+id/unit_frag_arrow"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:src="@drawable/icon_small_arrow"
            />
        <TextView
            android:layout_toRightOf="@+id/unit_frag_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            android:text="@string/return_to_setting"
            android:textColor="@color/sup_text_color"
            />

        <TextView
            android:id="@+id/unit_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/unit"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:layout_centerVertical="true"
            android:textColor="@color/sup_text_color"
            />
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/sup_text_color"
        android:text="@string/choose_unit"
        />

    <ListView
        android:id="@+id/unit_frag_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

    </ListView>
</LinearLayout>
